--- a/static/index.css
+++ b/static/index.css
@@ -10,16 +10,14 @@ header{
   align-items: center;
 }
 .title-img{
-  height: 285px;
   background-color: #e0d4b4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 7em;
+  font-size: 5em;
+  overflow-wrap: break-word;
+  overflow: hidden;
   font-weight: 900;
 }
 main{
-  width: 800px;
+  width: 90%;
   margin: 0 auto 100px auto;
 }
 li{
@@ -34,4 +32,39 @@ li{
   width: 100%;
   height: 100px;
   object-fit: cover;
+}
+
+@media screen and (min-width: 481px) {
+  /* 481px以上に適用されるCSS（タブレット用） */
+  main{
+    width: 80%;
+    margin: 0 auto 100px auto;
+  }
+  .title-img{
+    height: 285px;
+    background-color: #e0d4b4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 5em;
+    font-weight: 900;
+    overflow: hidden;
+  }
+}
+@media screen and (min-width: 960px) {
+  /* 960px以上に適用されるCSS（PC用） */
+  main{
+    width: 800px;
+    margin: 0 auto 100px auto;
+  }
+  .title-img{
+    height: 285px;
+    background-color: #e0d4b4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 7em;
+    font-weight: 900;
+    overflow: hidden;
+  }
 }
